--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <meta name="author" content="Antoaneta Ivanova">
     <meta name="description"
         content="This is a website in which people can purchase products in which the money goes to projects to help save the environment.">
-    <meta name="keywords" content="donation, environment, save the planet, plants, pollution, global warming">
+    <meta name="keywords" content="donation, environment, save the planet, plants, pollution, global warming, flowers, seeds, discount">
+
     <title>GrowFuture Foundation</title>
-    <link rel="icon" type="image/png" href="img/favicon.png">
-    <!--Favicon in web browser: https://www.w3schools.com/html/html_favicon.asp-->
+    <link rel="icon" type="image/png" href="img/favicon.png"><!--Favicon in web browser: https://www.w3schools.com/html/html_favicon.asp-->
+
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -21,9 +22,10 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light headernavigation " id="navigation">
-            <div class="container-fluid">
 
+        <nav class="navbar navbar-expand-lg navbar-light bg-light headernavigation " id="navigation">
+
+            <div class="container-fluid">
                 <a class="navbar-brand text-dark p-2 fw-bold fs-3" href="#navigation">
                     <img src="img/favicon.png" width="40" alt="logo of GrowFuture Foundation"><span
                         class="ps-3">GrowFuture Foundation</span>
@@ -52,6 +54,7 @@
                         </li>
                     </ul>
                 </div>
+
             </div>
         </nav>
 
@@ -73,7 +76,7 @@
                         and eco-friendly products, YOU become part of our mission to support plant growth, bees,
                         butterflies, and local wildlife. <b>Every purchase helps fund local environmental and nature projects</b>, 
                         allowing us to protect green spaces and further expand the growth and conservation of our natural environment."
-                        <span style=" color:#0B6E4F;"><br><b>What are YOU waiting for? Come grow with US!</b></span></i>
+                        <span style=" color:#0B6E4F;"><br><b>What are YOU waiting for? Come grow with US!</b></span></i> <br>
                 </p>
             </div>
         </section>
@@ -96,12 +99,13 @@
                 <button type="button" id="checkoutbtn" class="col-5 fs-6 col-md-3">✅ Checkout</button>
 
                 <div class="row mt-3">
-
                     <div class="col-12 col-sm-6 col-md-4 mb-5">
                         <div class="card">
                             <img src="img/sunflower.jpg" class="card-img-top" alt="a picture of sunflowers">
                             <div class="card-body">
+
                                 <h5>Sunflower Seeds</h5>
+
                                 <p>Buy a pack of <b>20 sunflower seeds</b>! <br>
                                     Brighten up your home.
                                     Every purchase supports planting flowers in public green spaces.</p>
@@ -116,7 +120,9 @@
                         <div class="card">
                             <img src="img/lavender.jpg" class="card-img-top" alt="a picture of lavender flowers">
                             <div class="card-body">
+
                                 <h5 class="card-title">Lavender Seeds</h5>
+
                                 <p class="card-text">
                                     Buy a pack of <b>20 lavender seeds</b>! <br>
                                     Bring calm and fragrant lavender to your home.
@@ -132,7 +138,9 @@
                         <div class="card">
                             <img src="img/zinnia.jpeg" class="card-img-top" alt="a picture of zinnia flowers">
                             <div class="card-body">
+
                                 <h5 class="card-title">Zinnia Seeds</h5>
+
                                 <p class="card-text">
                                     Buy a pack of <b>20 zinnia seeds</b>! <br>
                                     Bring bold and colours to your home. Easiest to grow.
@@ -149,7 +157,9 @@
                         <div class="card">
                             <img src="img/lemontree.jpg" class="card-img-top" alt="a picture of a lemon tree">
                             <div class="card-body">
+
                                 <h5 class="card-title">Lemon Tree Seeds</h5>
+
                                 <p class="card-text">
                                     Buy a pack of <b>20 lemon tree seeds</b>! <br>
                                     Grow refreshing and fragrant lemons at your home.
@@ -167,7 +177,9 @@
                             <img src="img/wateringcan.jpg" class="card-img-top"
                                 alt="a picture of a Recycled Small Watering Can">
                             <div class="card-body">
+
                                 <h5 class="card-title">Recycled Small Watering Can</h5>
+
                                 <p class="card-text">Buy a <b>Recycled Small Watering Can</b>! <br>
                                     Made from recycled materials. Care for your plants.
                                     Every purchase helps support our community environmental projects.
@@ -184,7 +196,9 @@
                             <img src="img/butterflygardenmix.jpg" class="card-img-top"
                                 alt="a picture of butterfly-friendly flower mix.">
                             <div class="card-body">
+
                                 <h5 class="card-title">Butterfly Garden Mix</h5>
+
                                 <p class="card-text">
                                     Buy a 20g pack of <b>Butterfly Garden Mix</b>! <br>
                                     Colourful mix of flowers to attract butterflies.
@@ -201,7 +215,9 @@
                         <div class="card">
                             <img src="img/rosemary.jpg" class="card-img-top" alt="a picture of rosemary herbs.">
                             <div class="card-body">
+
                                 <h5 class="card-title">Rosemary Seeds</h5>
+
                                 <p class="card-text">
                                     Buy a pack of <b>20 Rosemary Seeds</b>! <br>
                                     Grow a healthy herb in your garden. Perfect for your cooking.
@@ -219,7 +235,9 @@
                             <img src="img/beeflowermix.jpg" class="card-img-top"
                                 alt="a picture of bee-friendly flower mix">
                             <div class="card-body">
+
                                 <h5 class="card-title">Bee-Friendly Flower Mix</h5>
+
                                 <p class="card-text">
                                     Buy a 20g pack of <b>Bee-Friendly Flower Mix</b>! <br>
                                     Many colourful flowers to support bees.
@@ -236,7 +254,9 @@
                         <div class="card">
                             <img src="img/birdhouse.jpg" class="card-img-top" alt="a picture of a Wooden Bird House">
                             <div class="card-body">
+
                                 <h5 class="card-title">Wooden Bird House</h5>
+
                                 <p class="card-text">
                                     Buy a <b>Wooden Bird House</b>! <br>
                                     Perfect for supporting local bird populations.
@@ -254,7 +274,9 @@
                         <div class="card">
                             <img src="img/olive.jpg" class="card-img-top" alt="a picture of an olive tree">
                             <div class="card-body">
+
                                 <h5 class="card-title">Olive Tree Seeds</h5>
+
                                 <p class="card-text">
                                     Buy a pack of <b>20 Olive Tree Seeds</b>! <br>
                                     Bring a Mediterranean touch to your home.
@@ -272,7 +294,9 @@
                             <img src="img/biodegradablepots.jpg" class="card-img-top"
                                 alt="a picture of biodegradable Starter Pots">
                             <div class="card-body">
+
                                 <h5 class="card-title">Biodegradable Starter Pots</h5>
+
                                 <p class="card-text">
                                     Buy 4-pack of <b>Biodegradable Starter Pots</b>! <br>
                                     Eco-friendly pots, perfect for starting seed growth at home.
@@ -289,7 +313,9 @@
                         <div class="card">
                             <img src="img/plantlabels.jpg" class="card-img-top" alt="a picture of Wooden Plant Labels">
                             <div class="card-body">
+
                                 <h5 class="card-title">Wooden Plant Labels</h5>
+
                                 <p class="card-text">Buy a pack of <b>6 Wooden Plant Labels</b>! <br>
                                     Eco-friendly labels, perfect for organizing herbs, flowers, and seedlings.
                                     Each purchase supports our planting projects.
@@ -314,6 +340,9 @@
 
         </section>
 
+
+
+
         <section id="buyerinformation" class="hide">
 
             <h1 id="headingpage2">Buyer & Shipping Information</h1>
@@ -323,11 +352,13 @@
                     <h2 class="subheadingpage2">Buyer Information</h2>
 
                     <div class="row justify-content-center">
+
                         <div class="buyerinfo col-12 col-sm-12 col-md-12 col-lg-4 ms-3">
                             <label for="firstName">Firstname:</label>
                             <input type="text" class="form-control" id="firstName" name="firstName"
                                 placeholder="Enter your firstname..." class="form-control" required>
                         </div>
+
                         <div class="buyerinfo col-12 col-sm-12 col-md-12 col-lg-4 ms-3">
                             <label for="surname">Surname:</label>
                             <input type="text" class="form-control" id="surname" name="surname"
@@ -336,11 +367,13 @@
                     </div>
 
                     <div class="row justify-content-center">
+
                         <div class="buyerinfo col-12 col-sm-12 col-md-12 col-lg-4 ms-3">
                             <label for="email">Email address:</label>
                             <input type="email" class="form-control" id="email" name="email"
                                 placeholder="Enter your email-address..." required>
                         </div>
+
                         <div class="buyerinfo col-12 col-sm-12 col-md-12 col-lg-4 ms-3">
                             <label for="phoneNumber">Phone number:</label>
                             <input type="tel" class="form-control" id="phoneNumber" name="phoneNumber"
@@ -351,7 +384,6 @@
                 </div>
 
                 <div class="container-fluid">
-
                     <h2 class="subheadingpage2">Shipping Address</h2>
 
                     <div class="row justify-content-center">
@@ -360,6 +392,7 @@
                             <input type="text" class="form-control id=" streetAddress" name="streetAddress"
                                 placeholder="Enter your street address..." required>
                         </div>
+
                         <div class="shippinginfo col-12 col-sm-12 col-md-12 col-lg-4 ms-3">
                             <label for="houseNumber">House Number:</label>
                             <input type="text" class="form-control" id="houseNumber" name="houseNumber"
@@ -369,42 +402,57 @@
 
                     <div class="row justify-content-center">
                         <div class="shippinginfo col-12 col-sm-12 col-md-12 col-lg-4 ms-3">
+
                             <label for="city">City:</label>
                             <input type="text" class="form-control" id="city" name="city"
                                 placeholder="Enter your city..." required>
                         </div>
+
                         <div class="shippinginfo col-12 col-sm-12 col-md-12 col-lg-4 ms-3">
+
                             <label for="postalCode">ZIP/Postal code:</label>
-                            <input type="text" class="form-control" maxlength='6' name="postalCode"
+                            <input type="text" class="form-control" id="postalcode" maxlength='6' name="postalCode"
                                 placeholder="Enter your ZIP/Postal code..." required>
                         </div>
                     </div>
+
                     <div class="row justify-content-center">
                         <div class="shippinginfo col-12 col-sm-12 col-md-12 col-lg-4 ms-3">
+
                             <label for="stateRegion">State/Region:</label>
                             <input type="text" class="form-control" id="stateRegion" name="stateRegion"
                                 placeholder="Enter your state/region..." required>
                         </div>
+
                         <div class="shippinginfo col-12 col-sm-12 col-md-12 col-lg-4 ms-3">
+
                             <label for="country">Country:</label>
                             <input type="text" class="form-control" id="country" name="country"
                                 placeholder="Enter your country..." required>
                         </div>
                     </div>
+
                     <div class="row justify-content-center">
+
                         <div class="col-auto mb-5 mt-5">
                             <button type="submit" id="placeorderbtn">Place Order</button>
                         </div>
+
                     </div>
                 </div>
             </form>
         </section>
 
+
+
+
         <section id="confirmationpage" class="hide">
             <div class="container-fluid">
+
                 <div class="row">
                     <h2 class="subheading pt-3">Thank you for your Purchase!</h2>
                 </div>
+
                 <div class="row">
                     <p class="fs-4 fs-md-3 " id="thankyou">
                         Your purchase will fund our projects that <b>protect native plants</b> and <b>support local wildlife</b> in our
@@ -412,49 +460,62 @@
                         wildlife.
                     </p>
                 </div>
+
                 <div class="row">
                     <span style="text-align: center; font-size: 50px;">💚</span>
                 </div>
+
                 <div class="row">
                     <h2 class="subheading">Purchase Summary:</h2>
+
                     <div class="row justify-content-center">
                         <p class="fs-5 text-center"><b>🛒 Cart Summary:</b></p>
                         <ul id="summary" class="list-group list-unstyled fs-5 col-12 col-md-6 text-center">
                         </ul>
                     </div>
+
                     <div class="text-center fs-5 mt-3">
                         <p><b>Subtotal: </b><span id="subtotal"> </span>€</p>
                         <p><b>Discount: </b><span id="discount"> </span>€</p>
                         <p><b>Total Cost: </b><span id="totalcost"> </span>€</p>
                     </div>
-                </div>
 
+                </div>
             </div>
         </section>
 
     </main>
 
     <footer>
+
         <div class="container-fluid footertext">
+
             <div class="row mb-4">
+
                 <div class="col-12 fs-5 mb-3 socialmedia">
                     <span><b>Follow us on:</b></span>
                     <a id='socialmedia' href="">❤️ Instagram</a>
                     <a href="">💙 Facebook</a>
                 </div>
+
                 <div class="col-12 fs-5 contact">
                     <span><b>Contact us:</b></span>
                     <span id='contact'>📞 +43 660 123 4567</span>
                     <span id='contact'>📧 hello@growfuture.org</span>
                 </div>
+
             </div>
+
         </div>
+
         <span>© 2024 GrowFuture Foundation. All rights reserved.</span>
 
         <nav class="navbar footernavigation" id="footnav">
+
             <div class="container-fluid">
 
                 <a class="navbar-brand text-dark p-2 fw-bold fs-3" href="#navigation">
+
                     <img src="img/favicon.png" width="40" alt="logo of GrowFuture Foundation"><span
                         class="ps-3">GrowFuture Foundation</span>
                 </a>
@@ -470,13 +531,17 @@
                         <a class="nav-link text-dark fs-5 p-3" href="#shoppingsection">🛒Shop</a>
                     </li>
                 </ul>
+
             </div>
+
         </nav>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
-</body>
+
+
 </body>
 
 </html>
